chart/templates/netbox-netpolicies.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal-block-external
  namespace: malcolm
spec:
  # Select all the pods
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: malcolm
  egress:
  - ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: malcolm

# The same as yours
# kind: NetworkPolicy
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: deny-all-egress
#   namespace: malcolm
# spec:
#   policyTypes:
#   - Egress
#   podSelector: {}
# ---
# # allows connections to all pods in your namespace from all pods in your namespace
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-namespace-egress
#   namespace: malcolm
# spec:
#   podSelector: {}
#   policyTypes:
#   - Egress
#   egress:
#   - to:
#     - podSelector:
#         matchLabels: {}
# ---
# # allows connections from all pods in your namespace to all pods in your namespace
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-namespace-internal
#   namespace: malcolm
# spec:
#   podSelector: {}

# This needs to move to malcolm repo
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-es-kb
  namespace: malcolm
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          common.k8s.elastic.co/type: elasticsearch
          elasticsearch.k8s.elastic.co/cluster-name: dataplane-ek
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dataplane-ek
    ports:
    - protocol: TCP
      port: 9200
  - to:
    - podSelector:
        matchLabels:
          common.k8s.elastic.co/type: kibana
          kibana.k8s.elastic.co/name: dataplane-ek
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dataplane-ek
    ports:
    - protocol: TCP
      port: 5601

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-misp
  namespace: malcolm
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: misp-core
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: misp
    ports:
    - protocol: TCP
      port: 80

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-suricata-zeek-live
  namespace: malcolm
spec:
  podSelector:
    matchExpressions:
    - key: name
      operator: In
      values:
        - suricata-live-daemonset
        - zeek-live-daemonset
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress: []

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-to-ingress-proxy
  namespace: malcolm
spec:
  podSelector:
    matchLabels:
      name: nginx-proxy-deployment
  policyTypes:
    - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 443
